--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    max-width: 80%;
+    max-width: 1440px;
     margin: 0 auto;
 }
 @media (max-width:1200px) {
